trunk/Archive/d1dcc9bcdcf43d287f28df1df08c3251-f0bd80647c520ac4f6fb0347af37c64b/output
+ clang++ -std=c++11 -stdlib=libc++ -O3 -Wall -Wextra -pedantic-errors main.cpp
main.cpp:17:1: error: static_assert failed ""
static_assert(HasEmplace<std::vector<int>>::value, "");
^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
